# recolor

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  date2.txt  date2_ejin.txt  date2_lalanoix.txt  date2_zboumedris.txt  date_anouamani.txt  date_ejin.txt  date_lalanoix.txt  date_zboumedris.txt  game.c  game.h  game_io.c  gamedefault  recolor_sdl.c  recolor_solve  recolor_solve.c  recolor_solve.h  recolor_text  recolor_text.c  repor  report.xml  test.txt  test_game_anouamani  test_game_anouamani.c  test_game_ejin  test_game_ejin.c  test_game_lalanoix  test_game_lalanoix.c  test_game_zboumedris  test_game_zboumedris.c  todo(1).txt  todo.txt  valgrind-out.txt
android/jni/src/: Android.mk  CMakeLists.txt  Makefile  game.c  game.h  game_io.c  main.c  recolor_solve.h  test_game_anouamani.c  test_game_ejin.c  test_game_zboumedris.c
report/: 0.html  1.html  2.html  3.html  4.html  index.html  stats.html
